fix(nav): add li url and improved gap spacing

--- a/src/scss/components/_site-head.scss
+++ b/src/scss/components/_site-head.scss
@@ -9,7 +9,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    gap: 0.3rem 1.5rem;
+    gap: 0.3rem 6rem;
     align-items: center;
     padding: 1rem 0;
 
